--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Welcome</title>
+    <title>Ray Del Vecchio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
